fixed banner spacing issues

--- a/psModuleUpdates/customStyles.css
+++ b/psModuleUpdates/customStyles.css
@@ -1215,26 +1215,26 @@ html[xmlns] .slides {display: block;}
 	left: 10%;
 	bottom: 0;
 }
-@media (min-width: 768px) and (max-width: 991px) {
-  .pageTitle .container {
-    width: 750px;
-  }
-  .pageTitle.flexslider h2 {
-    font-size: 16px;
-    font-weight: bold;
-    margin-bottom: 0;
-  }
-  .pageTitle.flexslider p {
-    font-size: 14px;
-    margin-bottom: 0;
-  }
+@media (min-width: 768px) and (max-width: 1199px) {
+	.pageTitle .container {
+		width: 750px;
+	}
+	.pageTitle.flexslider h2 {
+		font-size: 16px;
+		font-weight: bold;
+		margin-bottom: 0;
+	}
+	.pageTitle.flexslider p {
+		font-size: 14px;
+		margin-bottom: 0;
+	}
 	.pageTitle.flexslider table img {
 		max-width: 323px;
 		max-height: 203px;
 	}
 	.pageTitle .mandalaBackground table,
 	.pageTitle .fixedHeight {
-		height: 283px;
+		height: 285px;
 	}
 	.sliderImgAbsolute {
 		bottom: 17%;
